--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
             incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <h3 class="text-white mb-4">Heading</h3>
+                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="text-white mb-4">Heading</h3>
+                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="text-white mb-4">Heading</h3>
+                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
     </div>
   </section>
 
@@ -80,12 +94,42 @@
 
       <!-- Featured Project Row -->
       <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="mb-4">We can verify</h2>
+        <div class="col-lg-8 mx-auto text-center mb-5">
+          <h2 class="mb-4">How it works</h2>
           <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
+        <div class="row mb-5">
+            <div class="col-lg-4">
+                <h3 class="mb-4">Verified supply</h3>
+                <p class="text-black-50">Each stage of the supply chain is verified. Supply chain becomes transparent
+                    to the extent that we want it to be.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="mb-4">VinoTrust certified</h3>
+                <p class="text-black-50">Each bottle of wine has a recorded history, permanently recorded in
+                    blockchain. We can provide verified history for each unit.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="mb-4">Product labeling</h3>
+                <p class="text-black-50">Each bottle is labeled with a VinoTrust tag.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-2">
+            </div>
+            <div class="col-lg-4">
+                <h3 class="mb-4">Retail verification</h3>
+                <p class="text-black-50">Retail locations can use mobile devices for legitimacy. They can be assured
+                    the wine they receive is genuine.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="mb-4">Consumer verified</h3>
+                <p class="text-black-50">When the consumer purchases a bottle of wine they are able to verify its
+                    authenticity.</p>
+            </div>
+        </div>
 
     </div>
   </section>
