we can verity and team sections

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     </div>
   </header>
 
-  <!-- About Section -->
+  <!-- About section -->
   <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Why blockchain?</h2>
+          <h2 class="text-white mb-4">Why VinoTrust?</h2>
           <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua.</p>
         </div>
@@ -88,14 +88,12 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <!-- How it works section -->
+  <section id="how" class="how-section content-section bg-light">
     <div class="container">
-
-      <!-- Featured Project Row -->
       <div class="row">
         <div class="col-lg-8 mx-auto text-center mb-5">
-          <h2 class="mb-4">How it works</h2>
+          <h2 class="mb-4">How VinoTrust works</h2>
           <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua.</p>
         </div>
@@ -134,7 +132,84 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- How it works section -->
+  <section id="verify" class="verify-section content-section bg-dark">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-8 mx-auto text-white text-center mb-5">
+                  <h2 class="mb-4">We can verify</h2>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                      incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+          </div>
+          <div class="row mb-5">
+              <div class="col text-center">
+                  <h3 class="text-white mb-4">Harvest</h3>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="col text-center">
+                  <h3 class="text-white mb-4">Weighbridge</h3>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="col text-center">
+                  <h3 class="text-white mb-4">Crushing / Press</h3>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="col text-center">
+                  <h3 class="text-white mb-4">Wine maturation</h3>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="col text-center">
+                  <h3 class="text-white mb-4">Bottling</h3>
+                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Team section -->
+  <section id="team" class="team-section content-section bg-light">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-8 mx-auto text-center mb-5">
+                  <h2 class="mb-4">VinoTrust team</h2>
+              </div>
+          </div>
+          <div class="row mb-5 text-center">
+              <div class="col-lg-2">
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Jeffrey Grosset</h3>
+                  <p class="text-black-50">Founder</p>
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">David Travers</h3>
+                  <p class="text-black-50">Founder</p>
+              </div>
+          </div>
+          <div class="row text-center">
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Chris Bishop</h3>
+                  <p class="text-black-50">Lead Engineer and Designer</p>
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Seeta Indrani</h3>
+                  <p class="text-black-50">UX Facilitator and Delivery</p>
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Rob Allen</h3>
+                  <p class="text-black-50">Blockchain Engineer</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Contact section -->
   <section class="contact-section bg-black">
     <div class="container">
 
@@ -146,7 +221,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-4"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="text-white">PO BOX 64, Auburn, SA 5451<br>Australia</div>
+              <div class="text-white">G&T Technology Pty Ltd<br>PO BOX 64, Auburn, SA 5451<br>Australia</div>
             </div>
           </div>
         </div>
@@ -194,7 +269,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; VinoTrust 2020
+      Copyright &copy; G&T Technology Pty Ltd 2020
     </div>
   </footer>
 
