--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.css" rel="stylesheet">
+  <link href="css/grayscale.css?ver=0.2" rel="stylesheet">
 
 </head>
 
@@ -30,23 +30,6 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">VinoTrust</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Team</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
-          </li>
-        </ul>
-      </div>
     </div>
   </nav>
 
@@ -55,214 +38,24 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0">VinoTrust</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Blockchain based supply chain solution</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Find out more</a>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Blockchain based supply chain solution for the wine industry</h2>
+        <h3 class="text-white">Coming soon</h3>
       </div>
     </div>
   </header>
 
-  <!-- About section -->
-  <section id="about" class="about-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Why VinoTrust?</h2>
-          <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-        </div>
-    </div>
-  </section>
-
-  <!-- How it works section -->
-  <section id="how" class="how-section content-section bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center mb-5">
-          <h2 class="mb-4">How VinoTrust works</h2>
-          <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-        <div class="row mb-5">
-            <div class="col-lg-4">
-                <h3 class="mb-4">Verified supply</h3>
-                <p class="text-black-50">Each stage of the supply chain is verified. Supply chain becomes transparent
-                    to the extent that we want it to be.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="mb-4">VinoTrust certified</h3>
-                <p class="text-black-50">Each bottle of wine has a recorded history, permanently recorded in
-                    blockchain. We can provide verified history for each unit.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="mb-4">Product labeling</h3>
-                <p class="text-black-50">Each bottle is labeled with a VinoTrust tag.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-2">
-            </div>
-            <div class="col-lg-4">
-                <h3 class="mb-4">Retail verification</h3>
-                <p class="text-black-50">Retail locations can use mobile devices for legitimacy. They can be assured
-                    the wine they receive is genuine.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="mb-4">Consumer verified</h3>
-                <p class="text-black-50">When the consumer purchases a bottle of wine they are able to verify its
-                    authenticity.</p>
-            </div>
-        </div>
-
-    </div>
-  </section>
-
-  <!-- How it works section -->
-  <section id="verify" class="verify-section content-section bg-dark">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-8 mx-auto text-white text-center mb-5">
-                  <h2 class="mb-4">We can verify</h2>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-          </div>
-          <div class="row mb-5">
-              <div class="col text-center">
-                  <h3 class="text-white mb-4">Harvest</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="col text-center">
-                  <h3 class="text-white mb-4">Weighbridge</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="col text-center">
-                  <h3 class="text-white mb-4">Crushing / Press</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="col text-center">
-                  <h3 class="text-white mb-4">Wine maturation</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
-              </div>
-              <div class="col text-center">
-                  <h3 class="text-white mb-4">Bottling</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
-              </div>
-          </div>
-      </div>
-  </section>
-
-  <!-- Team section -->
-  <section id="team" class="team-section content-section bg-light">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-8 mx-auto text-center mb-5">
-                  <h2 class="mb-4">VinoTrust team</h2>
-              </div>
-          </div>
-          <div class="row mb-5 text-center">
-              <div class="col-lg-2">
-              </div>
-              <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="mb-4">Jeffrey Grosset</h3>
-                  <p class="text-black-50">Founder</p>
-              </div>
-              <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="mb-4">David Travers</h3>
-                  <p class="text-black-50">Founder</p>
-              </div>
-          </div>
-          <div class="row text-center">
-              <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="mb-4">Chris Bishop</h3>
-                  <p class="text-black-50">Lead Engineer and Designer</p>
-              </div>
-              <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="mb-4">Seeta Indrani</h3>
-                  <p class="text-black-50">UX Facilitator and Delivery</p>
-              </div>
-              <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="mb-4">Rob Allen</h3>
-                  <p class="text-black-50">Blockchain Engineer</p>
-              </div>
-          </div>
-      </div>
-  </section>
-
   <!-- Contact section -->
   <section class="contact-section bg-black">
     <div class="container">
-
       <div class="row">
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-4"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
-              <hr class="my-4">
-              <div class="text-white">G&T Technology Pty Ltd<br>PO BOX 64, Auburn, SA 5451<br>Australia</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-4"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
-              <hr class="my-4">
-              <div class="text-white">
-                <a href="#">info@vinotrust.com.au</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-4"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
-              <hr class="my-4">
-              <div class="text-white">+61 (0)8 8849 2175</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="mx-2">
+      <div class="social d-flex justify-content-center col-lg-12">
+        <a href="https://github.com/GT-Technology" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
       </div>
 
+      </div>
     </div>
   </section>
 
