Compliance and integration

--- a/draft.html
+++ b/draft.html
@@ -66,23 +66,25 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Why VinoTrust?</h2>
-          <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.</p>
+          <h2 class="text-white mb-4">Why blockchain?</h2>
+          <p class="text-white-50">A blockchain solution is not just about technology, it’s about solving problems that
+              have been insolvable before due to the inability of the ecosystem to share information in a transparent,
+              immutable and trusted manner. Unlike other systems of record, blockchain technology provides a trusted
+              record of data.</p>
         </div>
       </div>
         <div class="row">
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text-white-50">Fake Wine.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text-white-50">Streamlined wine production management system.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="text-white-50">Global perception - enhance and protect your reputation</p>
             </div>
         </div>
     </div>
@@ -94,8 +96,9 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center mb-5">
           <h2 class="mb-4">How VinoTrust works</h2>
-          <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.</p>
+          <p class="text-black-50">VinoTrust provides the foundation for a new generation of transactions that
+              establishes trust and transparency. The software-as-a-service (SaaS) solution is working to ensure that
+              trust enables, rather than hinders.</p>
         </div>
       </div>
         <div class="row mb-5">
@@ -115,8 +118,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2">
-            </div>
             <div class="col-lg-4">
                 <h3 class="mb-4">Retail verification</h3>
                 <p class="text-black-50">Retail locations can use mobile devices for legitimacy. They can be assured
@@ -126,6 +127,11 @@
                 <h3 class="mb-4">Consumer verified</h3>
                 <p class="text-black-50">When the consumer purchases a bottle of wine they are able to verify its
                     authenticity.</p>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="mb-4">Compliance and integration</h3>
+                <p class="text-black-50">Help ensure safety and regulatory compliance such as LIP and integrates with
+                    your current management systems such as VinTrace*.</p>
             </div>
         </div>
 
