--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css?ver=0.2" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
+
 </head>
 
 <body id="page-top">
