images for verify

--- a/draft.html
+++ b/draft.html
@@ -43,10 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -78,15 +78,15 @@
       </div>
         <div class="row">
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
+                <h3 class="text-white mb-4">Identify fraud</h3>
                 <p class="text-white-50">Fake Wine.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
-                <p class="text-white-50">Streamlined wine production management system.</p>
+                <h3 class="text-white mb-4">Streamline</h3>
+                <p class="text-white-50">Streamline wine production management system.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Heading</h3>
+                <h3 class="text-white mb-4">Enhance global reputation</h3>
                 <p class="text-white-50">Global perception - enhance and protect your reputation</p>
             </div>
         </div>
@@ -147,30 +147,30 @@
           <div class="row">
               <div class="col-lg-8 mx-auto text-white text-center mb-5">
                   <h2 class="mb-4">We can verify</h2>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                      incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="text-white-50">Each stage of the supply chain is verified. Supply chain becomes transparent
+                      to the extent that we want it to be.</p>
               </div>
           </div>
           <div class="row mb-5">
               <div class="col text-center">
-                  <h3 class="text-white mb-4">Harvest</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+                  <img src="img/harvest.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="text-white">Harvest</h3>
               </div>
               <div class="col text-center">
-                  <h3 class="text-white mb-4">Weighbridge</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+                  <img src="img/weighbridge.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="text-white">Weighbridge</h3>
               </div>
               <div class="col text-center">
-                  <h3 class="text-white mb-4">Crushing / Press</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+                  <img src="img/making.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="text-white">Wine making</h3>
               </div>
               <div class="col text-center">
-                  <h3 class="text-white mb-4">Wine maturation</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+                  <img src="img/mat.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="text-white">Wine maturation</h3>
               </div>
               <div class="col text-center">
-                  <h3 class="text-white mb-4">Bottling</h3>
-                  <p class="text-white-50">Lorem ipsum dolor sit amet.</p>
+                  <img src="img/bottling.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="text-white">Bottling</h3>
               </div>
           </div>
       </div>
@@ -212,14 +212,14 @@
               <div class="col-lg-4">
                   <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Rob Allen</h3>
-                  <p class="text-black-50">Blockchain Engineer</p>
+                  <p class="text-black-50">Blockchain Consultant</p>
               </div>
           </div>
       </div>
   </section>
 
   <!-- Contact section -->
-  <section class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
