--- a/draft_v2.html
+++ b/draft_v2.html
@@ -87,7 +87,7 @@
                 <p class="text-white-50">Streamline wine production management system.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Enhance global reputation</h3>
+                <h3 class="text-white mb-4">Global reputation</h3>
                 <p class="text-white-50">Global perception - enhance and protect your reputation</p>
             </div>
         </div>
@@ -191,12 +191,12 @@
               <div class="col-lg-4">
                   <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Jeffrey Grosset</h3>
-                  <p class="text-black-50">Founder</p>
+                  <p class="text-black-50">Co-Founder</p>
               </div>
               <div class="col-lg-4">
                   <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">David Travers</h3>
-                  <p class="text-black-50">Founder</p>
+                  <p class="text-black-50">Co-Founder</p>
               </div>
           </div>
           <div class="row text-center">
