--- a/draft_v2.html
+++ b/draft_v2.html
@@ -199,7 +199,7 @@
                   <p class="text-black-50">Co-Founder</p>
               </div>
           </div>
-          <div class="row text-center">
+          <div class="row mb-5 text-center">
               <div class="col-lg-4">
                   <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Chris Bishop</h3>
@@ -214,6 +214,23 @@
                   <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Rob Allen</h3>
                   <p class="text-black-50">Blockchain Consultant</p>
+              </div>
+          </div>
+          <div class="row text-center">
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Frances Uggias</h3>
+                  <p class="text-black-50">Finance</p>
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Karl Kern</h3>
+                  <p class="text-black-50">Lead Platform Engineer</p>
+              </div>
+              <div class="col-lg-4">
+                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Mihai Diaconita</h3>
+                  <p class="text-black-50">Lead Android/iOS Developer</p>
               </div>
           </div>
       </div>
