profile images and new content

--- a/draft_v2.html
+++ b/draft_v2.html
@@ -65,12 +65,23 @@
   <!-- About section -->
   <section id="about" class="about-section text-center">
     <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2 class="text-white mb-4">Why VinoTrust?</h2>
+                <p class="text-white-50 mb-2">As Australia’s reputation as a wine producer strengthens, so does the
+                    risk of wine fraud. Through deceptive practices the reputation of wine producers in all major wine
+                    producing countries is being threatened.</p>
+                <p class="text-white-50 mb-2">VinoTrust aims to assure authenticity making your data immutable and
+                    verifiable through blockchain. With VinoTrust, customers can be assured of your wines’ authenticity,
+                    provenance and integrity.</p>
+                <p class="text-white-50">Conceived and designed by wine industry people and developed by leaders in
+                    digital and blockchain technology, this is a distinctly ‘out of industry’ innovation.</p>
+            </div>
+        </div>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Why blockchain?</h2>
-          <p class="text-white-50">Adulterated wine and fake labels on wine bottles are major issues for the industry.
-              In Italy alone wine sellers lose €2b of revenue because of it.<br><br>
-              A blockchain solution is not just about technology, it’s about solving problems that
+          <p class="text-white-50">A blockchain solution is not just about technology, it’s about solving problems that
               have been insolvable before due to the inability of the ecosystem to share information in a transparent,
               immutable and trusted manner. Unlike other systems of record, blockchain technology provides a trusted
               record of data.</p>
@@ -79,16 +90,15 @@
         <div class="row">
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Authenticity</h3>
-                <p class="text-white-50">Consumers want to know that what they’re drinking is what it claims to be, and
-                    that it comes from a reputable source.</p>
+                <p class="text-white-50 pl-3 pr-3">Assures consumers of authenticity, provenance and integrity.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Streamline</h3>
-                <p class="text-white-50">Streamline wine production management system.</p>
+                <p class="text-white-50 pl-3 pr-3">Streamlines wine production management.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="text-white mb-4">Global reputation</h3>
-                <p class="text-white-50">Global perception - enhance and protect your reputation</p>
+                <p class="text-white-50 pl-3 pr-3">Enhance and protect your global reputation.</p>
             </div>
         </div>
     </div>
@@ -107,38 +117,21 @@
       </div>
         <div class="row mb-5">
             <div class="col-lg-4">
-                <h3 class="mb-4">Verified supply</h3>
-                <p class="text-black-50">Each stage of the supply chain is verified. Supply chain becomes transparent
-                    to the extent that we want it to be.</p>
-            </div>
-            <div class="col-lg-4">
                 <h3 class="mb-4">VinoTrust certified</h3>
                 <p class="text-black-50">Each bottle of wine has a recorded history, permanently recorded in
                     blockchain. We can provide verified history for each unit.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="mb-4">Product labeling</h3>
-                <p class="text-black-50">Each bottle is labeled with a VinoTrust tag.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <h3 class="mb-4">Retail verification</h3>
-                <p class="text-black-50">Retail locations can use mobile devices for legitimacy. They can be assured
-                    the wine they receive is genuine.</p>
-            </div>
-            <div class="col-lg-4">
-                <h3 class="mb-4">Consumer verified</h3>
+                <h3 class="mb-4">Retail and consumer verified</h3>
                 <p class="text-black-50">When the consumer purchases a bottle of wine they are able to verify its
-                    authenticity.</p>
+                    authenticity. They can be assured the wine they receive is genuine.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="mb-4">Compliance and integration</h3>
-                <p class="text-black-50">Help ensure safety and regulatory compliance such as LIP and integrates with
-                    your current management systems such as VinTrace*.</p>
+                <p class="text-black-50">Offers regulatory compliance such as LIP. Integration with
+                    your current management systems' API.</p>
             </div>
         </div>
-
     </div>
   </section>
 
@@ -163,11 +156,11 @@
               </div>
               <div class="col text-center">
                   <img src="img/making.jpg" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="text-white">Wine making</h3>
+                  <h3 class="text-white">Winemaking</h3>
               </div>
               <div class="col text-center">
                   <img src="img/mat.jpg" alt="" class="rounded-circle img-fluid mb-3">
-                  <h3 class="text-white">Wine maturation</h3>
+                  <h3 class="text-white">Wine finish</h3>
               </div>
               <div class="col text-center">
                   <img src="img/bottling.jpg" alt="" class="rounded-circle img-fluid mb-3">
@@ -189,46 +182,50 @@
               <div class="col-lg-2">
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/jeff.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Jeffrey Grosset</h3>
                   <p class="text-black-50">Co-Founder</p>
+                  <p class="text-black-50 pl-3 pr-3">Owner and founder of Grosset Wines, Jeff has winemaking experience spanning
+                      50 vintages across diverse regions in Australia and Europe.</p>
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/david.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">David Travers</h3>
                   <p class="text-black-50">Co-Founder</p>
+                  <p class="text-black-50 pl-3 pr-3">Grape grower and farmer, David is Chairman of Scope Global; Director, Wine
+                      Grape Council SA and was founding Chairman of Sundrop Farms.</p>
               </div>
           </div>
           <div class="row mb-5 text-center">
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/chris.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Chris Bishop</h3>
                   <p class="text-black-50">Lead Engineer and Designer</p>
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/seeta.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Seeta Indrani</h3>
-                  <p class="text-black-50">UX Facilitator and Delivery</p>
+                  <p class="text-black-50">UX Facilitator</p>
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/rob.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Rob Allen</h3>
-                  <p class="text-black-50">Blockchain Consultant</p>
+                  <p class="text-black-50">Blockchain Lead</p>
               </div>
           </div>
           <div class="row text-center">
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/frances.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Frances Uggias</h3>
-                  <p class="text-black-50">Finance</p>
+                  <p class="text-black-50">Company secretary</p>
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/karl.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Karl Kern</h3>
                   <p class="text-black-50">Lead Platform Engineer</p>
               </div>
               <div class="col-lg-4">
-                  <img src="img/avatar.png" alt="" class="rounded-circle img-fluid mb-3">
+                  <img src="img/mihai.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Mihai Diaconita</h3>
                   <p class="text-black-50">Lead Android/iOS Developer</p>
               </div>
@@ -242,7 +239,7 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-4"></i>
@@ -253,7 +250,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-4"></i>
@@ -266,24 +263,9 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-4"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
-              <hr class="my-4">
-              <div class="text-white">+61 (0)8 8849 2175</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="social d-flex justify-content-center">
+      <div class="col-md-12 social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#" class="mx-2">
           <i class="fab fa-github"></i>
