add Michael and new rob pic

--- a/draft_v2.html
+++ b/draft_v2.html
@@ -179,9 +179,7 @@
               </div>
           </div>
           <div class="row mb-5 text-center">
-              <div class="col-lg-2">
-              </div>
-              <div class="col-lg-4">
+              <div class="col-lg-4 offset-lg-2">
                   <img src="img/jeff.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Jeffrey Grosset</h3>
                   <p class="text-black-50">Co-Founder</p>
@@ -213,13 +211,20 @@
                   <p class="text-black-50">Blockchain Lead</p>
               </div>
           </div>
-          <div class="row text-center">
+          <div class="row mb-5 text-center">
+              <div class="col-lg-4 offset-lg-2">
+                  <img src="img/michael.jpg" alt="" class="rounded-circle img-fluid mb-3">
+                  <h3 class="mb-4">Michael John Corbett</h3>
+                  <p class="text-black-50">Project Manager</p>
+              </div>
               <div class="col-lg-4">
                   <img src="img/frances.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Frances Uggias</h3>
-                  <p class="text-black-50">Company secretary</p>
+                  <p class="text-black-50">Company Secretary</p>
               </div>
-              <div class="col-lg-4">
+          </div>
+          <div class="row text-center">
+              <div class="col-lg-4 offset-lg-2">
                   <img src="img/karl.jpg" alt="" class="rounded-circle img-fluid mb-3">
                   <h3 class="mb-4">Karl Kern</h3>
                   <p class="text-black-50">Lead Platform Engineer</p>
