new Frances pic

--- a/draft_v2.html
+++ b/draft_v2.html
@@ -128,8 +128,8 @@
             </div>
             <div class="col-lg-4">
                 <h3 class="mb-4">Compliance and integration</h3>
-                <p class="text-black-50">Offers regulatory compliance such as LIP. Integration with
-                    your current management systems' API.</p>
+                <p class="text-black-50">Simplify regulatory compliance such as LIP. Integration with
+                    current management systems' API.</p>
             </div>
         </div>
     </div>
