new content go live

--- a/draft_v2.html
+++ b/draft_v2.html
@@ -68,37 +68,34 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <h2 class="text-white mb-4">Why VinoTrust?</h2>
-                <p class="text-white-50 mb-2">As Australia’s reputation as a wine producer strengthens, so does the
-                    risk of wine fraud. Through deceptive practices the reputation of wine producers in all major wine
-                    producing countries is being threatened.</p>
-                <p class="text-white-50 mb-2">VinoTrust aims to assure authenticity making your data immutable and
-                    verifiable through blockchain. With VinoTrust, customers can be assured of your wines’ authenticity,
-                    provenance and integrity.</p>
-                <p class="text-white-50">Conceived and designed by wine industry people and developed by leaders in
-                    digital and blockchain technology, this is a distinctly ‘out of industry’ innovation.</p>
+                <p class="text-white-50 mb-4">Through deceptive practices the global reputation of wine authenticity is
+                    being threatened.  VinoTrust will assure this authenticity by making your data immutable and
+                    verifiable through blockchain. Conceived and designed by wine industry people and developed by
+                    leaders in digital and blockchain technology, this is a distinctly ‘out of Industry’ solution.</p>
             </div>
         </div>
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Why blockchain?</h2>
-          <p class="text-white-50">A blockchain solution is not just about technology, it’s about solving problems that
-              have been insolvable before due to the inability of the ecosystem to share information in a transparent,
-              immutable and trusted manner. Unlike other systems of record, blockchain technology provides a trusted
-              record of data.</p>
-        </div>
-      </div>
         <div class="row">
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Authenticity</h3>
-                <p class="text-white-50 pl-3 pr-3">Assures consumers of authenticity, provenance and integrity.</p>
+                <h3 class="text-white mb-2">Authenticity</h3>
+                <p class="text-white-50 pl-3 pr-3">Combats deceptive packaging, copied labels, refilled bottles and
+                    misrepresentation of variety and region.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Streamline</h3>
-                <p class="text-white-50 pl-3 pr-3">Streamlines wine production management.</p>
+                <h3 class="text-white mb-2">Streamline</h3>
+                <p class="text-white-50 pl-3 pr-3">Streamlines wine production supply chain management.</p>
             </div>
             <div class="col-lg-4">
-                <h3 class="text-white mb-4">Global reputation</h3>
+                <h3 class="text-white mb-2">Global reputation</h3>
                 <p class="text-white-50 pl-3 pr-3">Enhance and protect your global reputation.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2 class="text-white mb-2">Why blockchain?</h2>
+                <p class="text-white-50">A blockchain solution is not just about technology, it’s about solving problems that
+                  have been insolvable before due to the inability of the ecosystem to share information in a transparent,
+                  immutable and trusted manner. Unlike other systems of record, blockchain technology provides a trusted
+                  record of data.</p>
             </div>
         </div>
     </div>
@@ -118,18 +115,17 @@
         <div class="row mb-5">
             <div class="col-lg-4">
                 <h3 class="mb-4">VinoTrust certified</h3>
-                <p class="text-black-50">Each bottle of wine has a recorded history, permanently recorded in
-                    blockchain. We can provide verified history for each unit.</p>
+                <p class="text-black-50">The provenance of each bottle of wine is permanently recorded in Blockchain.
+                    A VinoTrust verified history for each unit.  A system that helps avoid fraud helps everyone, wine
+                    producers, resellers, consumers.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="mb-4">Retail and consumer verified</h3>
-                <p class="text-black-50">When the consumer purchases a bottle of wine they are able to verify its
-                    authenticity. They can be assured the wine they receive is genuine.</p>
+                <p class="text-black-50">Reseller reputation enhanced. Consumer confidence reinforced.</p>
             </div>
             <div class="col-lg-4">
                 <h3 class="mb-4">Compliance and integration</h3>
-                <p class="text-black-50">Simplify regulatory compliance such as LIP. Integration with
-                    current management systems' API.</p>
+                <p class="text-black-50">Streamline record keeping and simplify LIP regulatory compliance.</p>
             </div>
         </div>
     </div>
@@ -244,18 +240,47 @@
 
       <div class="row">
 
+          <div class="col-md-6 mb-3 mb-md-0">
+              <div class="card py-4 h-100">
+                  <div class="card-body">
+                      <!-- Begin Mailchimp Signup Form -->
+                      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                      <div id="mc_embed_signup">
+                          <form action="https://vinotrust.us4.list-manage.com/subscribe/post?u=9c17d7169aabeb1af172f0935&amp;id=00025f589d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                              <div id="mc_embed_signup_scroll">
+                                  <h3>Subscribe to Vinotrust</h3>
+                                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                  <div class="mc-field-group form-group">
+                                      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                                      </label>
+                                      <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                                  </div>
+                                  <div id="mce-responses" class="clear">
+                                      <div class="response" id="mce-error-response" style="display:none"></div>
+                                      <div class="response" id="mce-success-response" style="display:none"></div>
+                                  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9c17d7169aabeb1af172f0935_00025f589d" tabindex="-1" value=""></div>
+                                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-info"></div>
+                              </div>
+                          </form>
+                      </div>
+                      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                      <!--End mc_embed_signup-->
+                  </div>
+              </div>
+          </div>
+
         <div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
-            <div class="card-body text-center">
+            <div class="card-body text-right">
               <i class="fas fa-map-marked-alt text-primary mb-4"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
-              <hr class="my-4">
+              <h4 class="text-uppercase mb-2">Address</h4>
               <div class="text-white">G&T Technology Pty Ltd<br>PO BOX 64, Auburn, SA 5451<br>Australia</div>
             </div>
           </div>
         </div>
 
-        <div class="col-md-6 mb-3 mb-md-0">
+        <!--<div class="col-md-6 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-4"></i>
@@ -266,13 +291,13 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
       <div class="col-md-12 social d-flex justify-content-center">
-        <a href="#" class="mx-2">
+        <a href="https://twitter.com/vinotrust" target="_blank" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://github.com/GT-Technology" target="_blank" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
       </div>
